--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+               <li><a href="https://www.facebook.com/ashwin.balaji.96199"><i class="fa fa-facebook"></i></a></li>
                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/ashwin-balaji-0811"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.instagram.com/physx_noobie/"><i class="fa fa-instagram"></i></a></li>
             </ul>
          </div>
       </div>
@@ -164,7 +164,7 @@
 
             </div> <!-- item end -->
 
-            <div class="row item">
+            <!-- <div class="row item">
 
                <div class="twelve columns">
 
@@ -178,7 +178,7 @@
                   ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
                   </p>
 
-               </div>
+               </div> -->
 
             </div> <!-- item end -->
 
@@ -201,8 +201,8 @@
 
                <div class="twelve columns">
 
-                  <h3>Awesome Design Studio</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+                  <h3>The Skill Craft</h3>
+                  <p class="info">Core Committee Member <span>&bull;</span> <em class="date">July 2019 - Present</em></p>
 
                   <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -215,7 +215,7 @@
 
             </div> <!-- item end -->
 
-            <div class="row item">
+            <!-- <div class="row item">
 
                <div class="twelve columns">
 
@@ -229,7 +229,7 @@
                   ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
                   </p>
 
-               </div>
+               </div> -->
 
             </div> <!-- item end -->
 
@@ -719,7 +719,7 @@
 				   </form> <!-- Form End -->
 
                <!-- contact-warning -->
-               <div id="message-warning"> Error boy</div>
+               <div id="message-warning"> Error sending message</div>
                <!-- contact-success -->
 				   <div id="message-success">
                   <i class="fa fa-check"></i>Your message was sent, thank you!<br>
@@ -734,38 +734,15 @@
 
 					   <h4>Address and Phone</h4>
 					   <p class="address">
-						   Jonathan Doe<br>
-						   1600 Amphitheatre Parkway <br>
-						   Mountain View, CA 94043 US<br>
-						   <span>(123) 456-7890</span>
+						   Ashwin Balaji<br>
+						   427, VGV Vijey Gardens, 20th St South <br>
+						   TUP, TN, India - 641606<br>
+						   <span>+91-978-976-1211</span>
 					   </p>
 
 				   </div>
 
-               <div class="widget widget_tweets">
-
-                  <h4 class="widget-title">Latest Tweets</h4>
-
-                  <ul id="twitter">
-                     <li>
-                        <span>
-                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                        Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum
-                        <a href="#">http://t.co/CGIrdxIlI3</a>
-                        </span>
-                        <b><a href="#">2 Days Ago</a></b>
-                     </li>
-                     <li>
-                        <span>
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                        eaque ipsa quae ab illo inventore veritatis et quasi
-                        <a href="#">http://t.co/CGIrdxIlI3</a>
-                        </span>
-                        <b><a href="#">3 Days Ago</a></b>
-                     </li>
-                  </ul>
-
-		         </div>
+               
 
             </aside>
 
@@ -783,18 +760,14 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="https://www.facebook.com/ashwin.balaji.96199/"><i class="fa fa-facebook"></i></a></li>
                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/ashwin-balaji-0811"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.instagram.com/physx_noobie/"><i class="fa fa-instagram"></i></a></li>
             </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2014 CeeVee</li>
-               <li>Design by <a href="http://www.styleshout.com/" title="Styleshout" target="_blank">Styleshout</a></li>   
+               <li>&copy; Copyright 2020 Ashwin Balaji</li>   
             </ul>
 
          </div>
