--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Ashwin Balaji.</h1>
-            <h3>I'm a Manila based <span>graphic designer</span>, <span>illustrator</span> and <span>webdesigner</span> creating awesome and
-            effective visual identities for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h3>I'm a <span>physicist</span> interested in wide range of topics like
+            Quantum Foundations, Time in Physics, Loop Quantum Gravity and Symmetries in Gauge Theories. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
@@ -93,12 +93,11 @@
 
             <h2>About Me</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>I'm a physicist who is Interested  in  exploring  and  understanding  the  meaning  of  Time,  
+               Primordial  Cosmology,  Quantum Foundations and role of Gauge Symmetries in Field Theories 
+               in the context of Loop Quantum Gravity and to contribute to current frontiers of 
+               Research in these areas. I'm also interested in other aspects like Vr, Visualization, Web Design and Course Creation 
+               and I love to be both Student and an Instructor.
             </p>
 
             <div class="row">
