updated my skills section partially with accordion

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                <li><a href="https://www.linkedin.com/in/ashwin-balaji-0811"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.instagram.com/physx_noobie/"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://github.com/ashwinbalaji0811"><i class="fa fa-github" aria-hidden="true"></i></a></li>
             </ul>
          </div>
       </div>
@@ -280,19 +281,68 @@
             voluptatem sequi nesciunt.
             </p>
 
-            <button class="accordion">Section 1</button>
+            <button class="accordion">Programming</button>
 <div class="panel">
-  <p>Lorem ipsum...</p>
+   <ol>
+      <li>C++(CUDA)</li>
+      <li>Python</li>
+      <li>Julia</li>
+      <li>FORTRAN</li>
+    </ol>
 </div>
 
-<button class="accordion">Section 2</button>
+<button class="accordion">Softwares and Tools</button>
 <div class="panel">
-  <p>Lorem ipsum...</p>
+   <ol>
+      <li>MATLAB</li>
+      <li>Mathematica</li>
+      <li>Maple</li>
+      <li>SQL(MySQL and PostgreSQL)</li>
+      <li>LaTeX</li>
+      <li>MongoDB</li>
+    </ol>
 </div>
 
-<button class="accordion">Section 3</button>
+<button class="accordion">Web Development</button>
 <div class="panel">
-  <p>Lorem ipsum...</p>
+   <ol>
+      <li>HTML5</li>
+      <li>CSS3</li>
+      <li>Node.JS</li>
+      <li>Express Framework</li>
+      <li>Angular</li>
+      <li>Bootstrap 4 Framework</li>
+      <li>Django</li>
+    </ol>
+</div>
+
+<button class="accordion">Operating System</button>
+<div class="panel">
+   <ol>
+      <li>Windows(XP,7,8,10)</li>
+      <li>CentOS</li>
+      <li>Ubuntu</li>
+      <li>Pop OS</li>
+    </ol>
+</div>
+
+<button class="accordion">Languages</button>
+<div class="panel">
+   <ol>
+      <li>English</li>
+      <li>Tamil</li>
+      <li>French</li>
+      <li>German</li>
+    </ol>
+</div>
+
+<button class="accordion">3D Visualization and VR</button>
+<div class="panel">
+   <ol>
+      <li>Blender</li>
+      <li>Houdini</li>
+      <li>Unreal Engine</li>
+    </ol>
 </div>
 
 			</div> <!-- main-col end -->
@@ -792,6 +842,7 @@
                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                <li><a href="https://www.linkedin.com/in/ashwin-balaji-0811"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.instagram.com/physx_noobie/"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://github.com/ashwinbalaji0811"><i class="fa fa-github" aria-hidden="true"></i></a></li>
             </ul>
 
             <ul class="copyright">
