added wordpress and moodle to my skills list

--- a/index.html
+++ b/index.html
@@ -308,11 +308,14 @@
    <ol>
       <li>HTML5</li>
       <li>CSS3</li>
+      <li>Javascript</li>
       <li>Node.JS</li>
       <li>Express Framework</li>
       <li>Angular</li>
       <li>Bootstrap 4 Framework</li>
       <li>Django</li>
+      <li>Wordpress</li>
+      <li>Moodle</li>
     </ol>
 </div>
 
