--- a/index.html
+++ b/index.html
@@ -372,11 +372,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="">
-                        <img alt="" src="images/portfolio/coffee.jpg">
+                        <img alt="" src="images/portfolio/ezgif-2-6b5d8ddc4e68.gif">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Coffee</h5>
-                              <p>Illustrration</p>
+          					      <h5>Physics Wiki</h5>
+                              <p>A Wiki for Physics</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -392,7 +392,7 @@
                         <img alt="" src="images/portfolio/console.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Console</h5>
+          					      <h5>The Skill Craft</h5>
                               <p>Web Development</p>
           					   </div>
                         </div>
@@ -409,8 +409,8 @@
                         <img alt="" src="images/portfolio/judah.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Judah</h5>
-                              <p>Webdesign</p>
+          					      <h5>Git</h5>
+                              <p>Version Control</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -517,13 +517,13 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-coffee.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Coffee Cup</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
+			      <h4>Physics Wiki</h4>
+			      <p>I wanted a site which will help me learn Physics the way I learnt programming. Learning programming has become so easy. There are a lot of tutorials on the web, in the form of blogs, tutorial series videos and much more. Sadly, for Physics no such proper resources exist other than the series of Youtube Playlists uploaded by a few kind people. This is the initiative to fulfil that dream.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Wiki, Notes, Documentation</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net" target="_blank">Details</a>
+               <a href="https://physxnoob.herokuapp.com/" target="_blank">Visit</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -534,13 +534,13 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-console.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Console</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+			      <h4>The Skill Craft</h4>
+			      <p>Academy for Upbuild of students. This project is about the Development of Website for this Academy. The Website has inbuilt features for Learning Management, Blogging Tools and Customer Relationship Management(CRM) Tools like Email Newsletters and Live Chat tool.</p>
                <span class="categories"><i class="fa fa-tag"></i>Branding, Web Development</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net" target="_blank">Details</a>
+               <a href="https://theskillcraft.com/" target="_blank">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -551,13 +551,13 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-judah.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Judah</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding</span>
+			      <h4>Git</h4>
+			      <p>A Private VPS Hosted Version Control System for The Skill Craft used as Private Code Repository. This is used for keeping all the software developed under TSC private and closed.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Version Control, Private Server, VPS Management</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net" target="_blank">Details</a>
+               <a href="http://git.theskillcraft.com" target="_blank">Visit</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
