modified all the photos to match in the git tracking

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
-                        <img alt="" src="images/portfolio/console.jpg">
+                        <img alt="" src="images/portfolio/aconsole.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>The Skill Craft</h5>
@@ -406,7 +406,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-03" title="">
-                        <img alt="" src="images/portfolio/judah.jpg">
+                        <img alt="" src="images/portfolio/ajudah.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Git</h5>
@@ -426,8 +426,8 @@
                         <img alt="" src="images/portfolio/into-the-light.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Into The Light</h5>
-                              <p>Photography</p>
+          					      <h5>Physx Noob</h5>
+                              <p>Blog</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -514,7 +514,7 @@
 
          <div id="modal-01" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-coffee.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/am-coffee.jpg" alt="" />
 
 		      <div class="description-box">
 			      <h4>Physics Wiki</h4>
@@ -531,7 +531,7 @@
 
          <div id="modal-02" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-console.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/am-console.jpg" alt="" />
 
 		      <div class="description-box">
 			      <h4>The Skill Craft</h4>
@@ -548,7 +548,7 @@
 
          <div id="modal-03" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-judah.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/am-judah.jpg" alt="" />
 
 		      <div class="description-box">
 			      <h4>Git</h4>
@@ -568,13 +568,13 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-intothelight.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Into the Light</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Photography</span>
+			      <h4>Physx Noob</h4>
+			      <p>My Personal Blog to share my Thoughts and Reflections on the current affairs of Science, Math and Philosophy.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Blog</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net" target="_blank">Details</a>
+               <a href="http://physxnoob.com" target="_blank">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
