changed my email in php form

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Curriculum Vitae</a>
+                     <a href="#" class="button" target="_blank"><i class="fa fa-download"></i>Download Curriculum Vitae</a>
                   </p>
                </div>
 
@@ -695,7 +695,7 @@
 
             <div class="two columns header-col">
 
-               <h1><span>Client Testimonials</span></h1>
+               <h1><span>Testimonials</span></h1>
 
             </div>
 
@@ -790,7 +790,7 @@
                   </div>
 
                   <div>
-                     <button class="submit">Submit</button>
+                     <button class="submit" type="submit">Submit</button>
                      <span id="image-loader">
                         <img alt="" src="images/loader.gif">
                      </span>
