added my stack exchange profile to my profile page

--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
                <li><a href="https://www.linkedin.com/in/ashwin-balaji-0811"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.instagram.com/physx_noobie/"><i class="fa fa-instagram"></i></a></li>
                <li><a href="https://github.com/ashwinbalaji0811"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+               <li><a href="https://physxnoob.com/"><i class="fad fa-blog"></i></a></li>
+               <li><a href="https://physics.stackexchange.com/users/193484/ashwin-balaji"><i class="fa fa-stack-exchange" aria-hidden="true"></i></a></li>
             </ul>
          </div>
       </div>
@@ -557,7 +559,7 @@
 		      </div>
 
             <div class="link-box">
-               <a href="http://git.theskillcraft.com" target="_blank">Visit</a>
+               <a href="https://github.com/The-Skill-Craft" target="_blank">Visit</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -846,6 +848,8 @@
                <li><a href="https://www.linkedin.com/in/ashwin-balaji-0811"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.instagram.com/physx_noobie/"><i class="fa fa-instagram"></i></a></li>
                <li><a href="https://github.com/ashwinbalaji0811"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+               <li><a href="https://physxnoob.com/"><i class="fa fa-blog"></i></a></li>
+               <li><a href="https://physics.stackexchange.com/users/193484/ashwin-balaji"><i class="fa fa-stack-exchange" aria-hidden="true"></i></a></li>
             </ul>
 
             <ul class="copyright">
