--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                <li><a href="https://www.linkedin.com/in/ashwin-balaji-0811"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.instagram.com/physx_noobie/"><i class="fa fa-instagram"></i></a></li>
                <li><a href="https://github.com/ashwinbalaji0811"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-               <li><a href="https://physxnoob.com/"><i class="fad fa-blog"></i></a></li>
+               <li><a href="https://physxnoob.com/"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
                <li><a href="https://physics.stackexchange.com/users/193484/ashwin-balaji"><i class="fa fa-stack-exchange" aria-hidden="true"></i></a></li>
             </ul>
          </div>
@@ -848,7 +848,7 @@
                <li><a href="https://www.linkedin.com/in/ashwin-balaji-0811"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.instagram.com/physx_noobie/"><i class="fa fa-instagram"></i></a></li>
                <li><a href="https://github.com/ashwinbalaji0811"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-               <li><a href="https://physxnoob.com/"><i class="fa fa-blog"></i></a></li>
+               <li><a href="https://physxnoob.com/"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
                <li><a href="https://physics.stackexchange.com/users/193484/ashwin-balaji"><i class="fa fa-stack-exchange" aria-hidden="true"></i></a></li>
             </ul>
 
