updated the college cred of what i did in the page

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <p>I'm a physicist who is Interested  in  exploring  and  understanding  the  meaning  of  Time,  
                Primordial  Cosmology,  Quantum Foundations and role of Gauge Symmetries in Field Theories 
                in the context of Loop Quantum Gravity and to contribute to current frontiers of 
-               Research in these areas. I'm also interested in other aspects like Vr, Visualization, Web Design and Course Creation 
+               Research in these areas. I'm also interested in other aspects like VR, Visualization, Web Design and Course Creation 
                and I love to be both Student and an Instructor.
             </p>
 
@@ -183,10 +183,10 @@
                   <p class="info">B.Tech in Engineering Physics <span>&bull;</span> <em class="date">April 2021</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                  Here, I learnt a few Physics courses like General Relativity, Quantum Field Theory, Statistical Mechanics and some Math Courses like Stochastic Processes, Graph Theory, Group Theory, General Topology etc.
+                  I also learnt a handful of Programming Languages like C++, FORTRAN, Julia, Python and MATLAB. I was the Organiser and Core Committee Member of Science Outreach Society of CYGNUS - Physics Association and lead a team of
+                  Science enthusiasts to inspire the School Childern to take up career in Science. I also drafted lab manual for Computational Physics Lab Course and served as Class Representative for a class of 110 students for the course
+                  Modelling and Simulation using Python. 
                   </p>
 
                </div>
