updated the list of softwares i know to use

--- a/index.html
+++ b/index.html
@@ -299,6 +299,11 @@
       <li>MATLAB</li>
       <li>Mathematica</li>
       <li>Maple</li>
+      <li>Photoshop CC</li>
+      <li>Illustrator CC and Inkscape</li>
+      <li>MS Office</li>
+      <li>Canva</li>
+      <li>PuTTY</li>
       <li>SQL(MySQL and PostgreSQL)</li>
       <li>LaTeX</li>
       <li>MongoDB</li>
