added physics stackexchange stuff

--- a/index.html
+++ b/index.html
@@ -277,10 +277,9 @@
 
          <div class="nine columns main-col">
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt.
+            <p>Occasionally, used to do MEAN Stack Development, i manage juniors in developing projects using Django, .NET, Python desktop Apps
+               and a lot more. I also do some visualizations and learning to utilize VR Technology for Scientific outreach. I'm also involved in developing a Museum for KC-ECC
+               as a core committee member and working towards presenting Eastern Theology to the common public.
             </p>
 
             <button class="accordion">Programming</button>
@@ -447,11 +446,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-05" title="">
-                        <img alt="" src="images/portfolio/farmerboy.jpg">
+                        <img alt="" src="images/portfolio/afarmerboy.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Farmer Boy</h5>
-                              <p>Branding</p>
+          					      <h5>Physics</h5>
+                              <p>Stack Exchange</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -589,16 +588,16 @@
 
          <div id="modal-05" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-farmerboy.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/am-farmerboy.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Farmer Boy</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
+			      <h4>Physics Stack Exchange</h4>
+			      <p>Physics Stack Exchange is a question and answer site for active researchers, academics and students of physics and astronomy. It's built and run by the community as part of the Stack Exchange network of Q&A sites. With your help, we're working together to build a library of detailed answers to every question about physics, astronomy and astrophysics.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Community, Contribution, Physics</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net" target="_blank">Details</a>
+               <a href="https://physics.stackexchange.com/users/193484/ashwin-balaji" target="_blank">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
