--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button" target="_blank"><i class="fa fa-download"></i>Download Curriculum Vitae</a>
+                     <a href="CV_Final.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Download Curriculum Vitae</a>
                   </p>
                </div>
 
