--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                   <p class="info">B.Tech in Engineering Physics <span>&bull;</span> <em class="date">April 2021</em></p>
 
                   <p>
-                  Here, I learnt a few Physics courses like General Relativity, Quantum Field Theory, Statistical Mechanics and some Math Courses like Stochastic Processes, Graph Theory, Group Theory, General Topology etc.
+                  Here, I learnt a few Physics courses like General Relativity, Quantum Field Theory, Statistical Mechanics and some Math Courses like Bayesian Statistics, Stochastic Processes, Graph Theory, Group Theory, General Topology etc.
                   I also learnt a handful of Programming Languages like C++, FORTRAN, Julia, Python and MATLAB. I was the Organiser and Core Committee Member of Science Outreach Society of CYGNUS - Physics Association and lead a team of
                   Science enthusiasts to inspire the School Childern to take up career in Science. I also drafted lab manual for Computational Physics Lab Course and served as Class Representative for a class of 110 students for the course
                   Modelling and Simulation using Python. 
