added tsc details in index.html file dude

--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
                   <p class="info">Core Committee Member <span>&bull;</span> <em class="date">July 2019 - Present</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                  Lead and guided a group of 20+ Students by training them in Programming Skills and Soft Skills. Conducted a Virtual
+                  Internship Drive in AI during COVID-19 Lockdown. Managed the teams to develop Education enhancing Applications. Also, 
+                  taught Statistical Thermodynamics Course for select few with predisposition to learn NanoTech, Thin-Film Tech, Organic Electronics, Photonics
+                   for Non-Circuit Branch students.
                   </p>
 
                </div>
