--- a/index.html
+++ b/index.html
@@ -757,9 +757,7 @@
 
             <div class="ten columns">
 
-                  <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                  eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-                  voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                  <p class="lead">Whether you've got a question for me or a suggestion, i'd love to hear from you. Please use the form below to get in touch ;)
                   </p>
 
             </div>
