more additions to contact me form

--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
 
             <div class="ten columns">
 
-                  <p class="lead">Whether you've got a question for me or a suggestion, i'd love to hear from you. Please use the form below to get in touch ;)
+                  <p class="lead">Whether you've got a question for me or a suggestion, i'd love to hear from you. Your email isn't going to the inbox abyss, never to be seen or heard from again. Please use the form below to get in touch ;)
                   </p>
 
             </div>
