--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <li><a class="smoothscroll" href="#about">About</a></li>
 	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
             <li><a class="smoothscroll" href="#portfolio">Works</a></li>
-            <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
+            <li><a class="smoothscroll" href="#testimonials">Quotes</a></li>
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
          </ul> <!-- end #nav -->
 
@@ -700,7 +700,7 @@
 
             <div class="two columns header-col">
 
-               <h1><span>Testimonials</span></h1>
+               <h1><span>Quotes</span></h1>
 
             </div>
 
@@ -722,11 +722,9 @@
 
                      <li>
                         <blockquote>
-                           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                           Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                           nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+                           <p>I cannot imagine a theory containing an arbitrary number which could have been chosen by the creator just in another way. Numbers "arbitrarily chosen by God" doesn't exist and that their "alleged existence relies on our incomplete understanding"
                            </p>
-                           <cite>Mr. Adobe</cite>
+                           <cite>Albert einstein</cite>
                         </blockquote>
                      </li> <!-- slide ends -->
 
