call to action section has been updated you know duh

--- a/index.html
+++ b/index.html
@@ -667,15 +667,15 @@
 
          <div class="two columns header-col">
 
-            <h1><span>Get Hosting.</span></h1>
+            <h1><span>Quotes</span></h1>
 
          </div>
 
          <div class="seven columns">
 
-            <h2><span class="lead">Unde Omnis Iste</span></h2>
-            <p><span class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae. </span></p>
+            <h2><span class="lead">Below are My Favourite Quotes</span></h2>
+            <p><span class="lead">These Quotes have always inspired me in many aspects of Life and also acts as 
+               source of Inspiration. </span></p>
 
          </div>
 
@@ -732,7 +732,7 @@
                         <blockquote>
                            <p>I cannot imagine a theory containing an arbitrary number which could have been chosen by the creator just in another way. Numbers "arbitrarily chosen by God" doesn't exist and that their "alleged existence relies on our incomplete understanding"
                            </p>
-                           <cite>Albert einstein</cite>
+                           <cite>Albert Einstein</cite>
                         </blockquote>
                      </li> <!-- slide ends -->
 
