added my resume too

--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
                   <p>
                      <a href="CV_Final.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Download Curriculum Vitae</a>
                   </p>
+                  <p>
+                     <a href="Ashwin Balaji Resume.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Download Resume</a>
+                  </p>
                </div>
 
             </div> <!-- end row -->
