--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="images/profilepic.jpg" alt="" />
+            <img class="profile-pic"  src="images/defult_image.png" alt="" />
 
          </div>
 
