added the daily reader stuff

--- a/index.html
+++ b/index.html
@@ -465,11 +465,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-06" title="">
-                        <img alt="" src="images/portfolio/girl.jpg">
+                        <img alt="" src="images/portfolio/Daily Reader.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Girl</h5>
-                              <p>Photography</p>
+          					      <h5>Daily Reader</h5>
+                              <p>Books delivered to your Email</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -607,12 +607,12 @@
 
          <div id="modal-06" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-girl.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/am-girl.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Girl</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Photography</span>
+			      <h4>Daily Reader</h4>
+			      <p>A MEAN Stack App used to Deliver chunks of Books to Email to improve Reading Habits.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Reading, Daily, Habit Builder</span>
 		      </div>
 
             <div class="link-box">
