changed the photo in my resume to anonymous identity

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                      <a href="CV_Final.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Download Curriculum Vitae</a>
                   </p>
                   <p>
-                     <a href="Ashwin Balaji Resume.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="Resume.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
