added cookie consent script to webpage

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 }
    </style>
 
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-e27337e3-197b-4863-978e-d93467012b8e"></div>
+
 </head>
 
 <body>
