--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
   overflow: hidden;
 }
    </style>
-
-<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-e27337e3-197b-4863-978e-d93467012b8e"></div>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
 
 </head>
 
@@ -907,7 +905,25 @@ for (i = 0; i < acc.length; i++) {
   });
 }
    </script>
-
+<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+<script>
+window.cookieconsent.initialise({
+  "palette": {
+    "popup": {
+      "background": "#343c66",
+      "text": "#cfcfe8"
+    },
+    "button": {
+      "background": "#f71559"
+    }
+  },
+  "theme": "classic",
+  "position": "bottom-right",
+  "content": {
+    "href": "https://physxnoob.com/privacy-policy/"
+  }
+});
+</script>
 </body>
 
 </html>
