added stat mech

--- a/index.html
+++ b/index.html
@@ -483,11 +483,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-07" title="">
-                        <img alt="" src="images/portfolio/origami.jpg">
+                        <img alt="" src="images/portfolio/aorigami.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Origami</h5>
-                              <p>Illustrration</p>
+          					      <h5>Statistical Thermodynamics</h5>
+                              <p>Course Instructor</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -625,16 +625,30 @@
 
          <div id="modal-07" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-origami.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/stmch.png" alt="" />
 
 		      <div class="description-box">
-			      <h4>Origami</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Illustration</span>
+			      <h4>Statistical Thermodynamics</h4>
+			      <p>This Course intended to be beginner friendly introduction to Statistical Thermodynamics course for Non-Circuit branches like:
+
+                  Mechanical Engineering, 
+                  Production Engineering, 
+                  Chemical Engineering, 
+                  Civil Engineering, 
+                  Automobile Engineering; 
+                  who intend to pursue career or have intersts in
+                  
+                  Nanoscience & Nanotechnology, 
+                  Materials design, 
+                  Thin Film Technology, 
+                  Photonics, 
+                  Organic Electronics and
+                  Polymer Dynamics</p>
+               <span class="categories"><i class="fa fa-tag"></i>Course Instructor</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net" target="_blank">Details</a>
+               <a href="https://bit.ly/2QC7qKF" target="_blank">Playlist</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
