updated profile site

--- a/index.html
+++ b/index.html
@@ -150,9 +150,6 @@
                   <p>
                      <a href="CV_Final.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Download Curriculum Vitae</a>
                   </p>
-                  <p>
-                     <a href="Resume.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Download Resume</a>
-                  </p>
                </div>
 
             </div> <!-- end row -->
@@ -280,7 +277,7 @@
 
          <div class="nine columns main-col">
 
-            <p>Occasionally, used to do MEAN Stack Development, i manage juniors in developing projects using Django, .NET, Python desktop Apps
+            <p>Occasionally, used to do Web App Development, i manage juniors in developing projects using Django, .NET, Python desktop Apps
                and a lot more. I also do some visualizations and learning to utilize VR Technology for Scientific outreach. I'm also involved in developing a Museum for KC-ECC
                as a core committee member and working towards presenting Eastern Theology to the common public.
             </p>
@@ -318,10 +315,7 @@
       <li>HTML5</li>
       <li>CSS3</li>
       <li>Javascript</li>
-      <li>Node.JS</li>
-      <li>Express Framework</li>
-      <li>Angular</li>
-      <li>Bootstrap 4 Framework</li>
+      <li>PHP</li>
       <li>Django</li>
       <li>Wordpress</li>
       <li>Moodle</li>
@@ -344,7 +338,6 @@
       <li>English</li>
       <li>Tamil</li>
       <li>French</li>
-      <li>German</li>
     </ol>
 </div>
 
