corrections in minor scale

--- a/courses_completed.html
+++ b/courses_completed.html
@@ -150,7 +150,7 @@ ol.gradient-list > li + li {
     <li><strong>Deep Learning Specalization</strong> by deeplearning.ai on <a href="cert/Coursera 6FWJQXQT4Q3N.pdf" target="_blank">Coursera</a>.</li>
     <li><strong>TensorFlow in Practice Specalization</strong> by deeplearning.ai on <a href="cert/Coursera S5AHJ9662VU6.pdf" target="_blank">Coursera</a>.</li>
     <li><strong>Machine Learning</strong> by Stanford University on <a href="cert/Coursera PSS2P45Z9P5C.pdf" target="_blank">Coursera</a>.</li>
-    <li><strong>Parallel Computing with HPC Systems(Complete)</strong> by Udemy.</li>
+    <li><strong>Parallel Computing with HPC Systems(Complete)</strong> by <a href="https://www.udemy.com/certificate/UC-46621485-52d6-4180-b658-0cdfa7c036f5/" target="_blank">Udemy</a>.</li>
     <li><strong>Skepticism</strong> by University of California, Irvine on <a href="cert/Coursera 7UTZAFNYVPBP.pdf" target="_blank">Coursera</a>.</li>
     <li><strong>The Data Scientist’s Toolbox</strong> by John Hopkins University on <a href="cert/Coursera 2Q4PN6V4X9M4.pdf" target="_blank">Coursera</a>.</li>
     <li><strong>Academic Information Seeking</strong> by University of Copenhagen on <a href="cert/Coursera 9EBDSFMULB24.pdf" target="_blank">Coursera</a>.</li>
