--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Ashwin Balaji.</h1>
             <h3>I'm a <span>physicist</span> interested in wide range of topics like
-            Quantum Foundations, Time in Physics, Loop Quantum Gravity and Symmetries in Gauge Theories. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            Quantum Foundations, Time in Physics, Loop Quantum Gravity and QCD with Lattice Gauge Theories Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
@@ -148,7 +148,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="CV_Final.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Download Curriculum Vitae</a>
+                     <a href="#" class="button" target="_blank"><i class="fa fa-download"></i>Download Curriculum Vitae</a>
                   </p>
                </div>
 
@@ -315,8 +315,9 @@
       <li>HTML5</li>
       <li>CSS3</li>
       <li>Javascript</li>
-      <li>PHP</li>
-      <li>Django</li>
+      <li>PHP - Laravel</li>
+      <li>Django & FastAPI</li>
+      <li>VueJS</li>
       <li>Wordpress</li>
       <li>Moodle</li>
     </ol>
